--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,5 @@
 spring.application.name=clean-arch-example
+spring.datasource.url=jdbc:h2:file:./data/db
+spring.datasource.username=sa
+spring.datasource.password=
+spring.sql.init.mode=always
